need fix elipsis issue with small device port where dish-price overlaps dish-spec but no elipsis

--- a/style/style.scss
+++ b/style/style.scss
@@ -595,6 +595,9 @@ i.secondary-page-heart {
   font-family: Roboto;
   font-size: 15.043px;
   font-weight: 300;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .dish-card-subcontent {
